--- a/frontend-vanilla/index.html
+++ b/frontend-vanilla/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vanilla JS Guestbook</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container">
@@ -29,11 +29,12 @@
 
         <div class="entries" id="entries-container">
             <h2>Entries</h2>
+            <button id="delete-all-btn" class="delete-all-btn">Delete All Entries</button>
             <!-- Entries will be dynamically inserted here -->
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
